--- a/package.json
+++ b/package.json
@@ -14,15 +14,21 @@
     "@tailwindcss/vite": "^4.0.3",
     "@types/react-scroll": "^1.8.10",
     "@types/react-slick": "^0.23.13",
+    "@types/react-world-flags": "^1.6.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.3.1",
+    "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
     "react-responsive": "^10.0.0",
     "react-scroll": "^1.9.2",
     "react-slick": "^0.30.3",
+    "react-world-flags": "^1.6.0",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.0.3",
     "vite-tsconfig-paths": "^5.1.4"
