--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@fontsource/poppins": "^5.1.1",
+    "@hookform/resolvers": "^4.0.0",
+    "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.3",
     "@types/react-scroll": "^1.8.10",
     "@types/react-slick": "^0.23.13",
@@ -23,15 +25,19 @@
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-responsive": "^10.0.0",
     "react-scroll": "^1.9.2",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.3",
     "react-world-flags": "^1.6.0",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.0.3",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
